test/errors/error16.base
Unknown function 'NonExisting.foo'
fun foo() {
   val x = NonExisting.foo();
           ^^^^^^^^^^^^^^^
